--- a/resources/static/prometheus.css
+++ b/resources/static/prometheus.css
@@ -29,3 +29,9 @@ body {
 .navbar .container-fluid {
     padding: 0;
 }
+
+/* This class provides style for containers that hold card like (without background) objects within container-fluid and out of ccordion */
+.blank-card {
+  padding-bottom: 50px;
+  padding-right: 25px;
+}
