--- a/resources/static/prometheus.css
+++ b/resources/static/prometheus.css
@@ -30,7 +30,7 @@ body {
     padding: 0;
 }
 
-/* This class provides style for containers that hold card like (without background) objects within container-fluid and out of ccordion */
+/* This class provides style for containers that hold card like (without background) objects within container-fluid and out of accordion */
 .blank-card {
   padding-bottom: 50px;
   padding-right: 25px;
